fix article spacing

--- a/testdev/static/css/custom.css
+++ b/testdev/static/css/custom.css
@@ -18,17 +18,6 @@ html {
   scroll-padding-top: 5rem;
 }
 
-article::before {
-  content: '';
-  display: block;
-  height: 2rem;
-}
-
-.article-body {
-  width:90%; 
-  margin: 2rem auto
-}
-
 body {
   margin: 0;
   font-family: var(--font-family-body);
@@ -39,7 +28,7 @@ body {
 }
 
 article {
-  margin-top: 1rem;
+  padding: 0 5%;
 }
 
 .h1,
@@ -55,42 +44,48 @@ h4,
 h5,
 h6 {
   font-family: var(--font-family-headings);
-  margin-bottom: 0.8rem;
-  font-weight: 500;
   line-height: 1.2;
+  text-align: start;
 }
 
 .h1,
 h1 {
+  font-weight: 600;
   font-size: var(--font-size-1);
+  padding: 0.5rem 0;
 }
 
 .h2,
 h2 {
+  font-weight: 500;
   font-size: var(--font-size-2);
   padding: 0.35rem 0;
 }
 
 .h3,
 h3 {
+  font-weight: 500;
   font-size: var(--font-size-3);
   padding: 0.25rem 0;
 }
 
 .h4,
 h4 {
+  font-weight: 500;
   font-size: var(--font-size-4);
   padding: 0.15rem 0;
 }
 
 .h5,
 h5 {
+  font-weight: 500;
   font-size: var(--font-size-5);
   padding: 0.125rem 0 !important;
 }
 
 .h6,
 h6 {
+  font-weight: 400;
   font-size: var(--font-size-6);
   padding: 0.1rem 0 !important;
 }
@@ -185,18 +180,4 @@ code {
   margin-bottom: 0.8em;
   border-radius: 0.4em;
   list-style: none;
-}
-
-.card-video {
-  position: relative;
-  overflow: hidden;
-  padding-top: 56.25%; /* 16:9 acpect ration */
-}
-
-.card-video iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
